force-app/main/default/objects/Foto__c/Foto__c.object-meta.xml
<CustomObject>
    <fullName>Foto__c</fullName>
    <label>Foto</label>
    <pluralLabel>Foto's</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Foto Naam</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>