force-app/main/default/objects/Foto__c/fields/Beschrijving__c.field-meta.xml
<CustomField>
    <fullName>Beschrijving__c</fullName>
    <label>Beschrijving</label>
    <type>Text</type>
    <length>255</length>
</CustomField>