force-app/main/default/objects/Foto__c/fields/Bron__c.field-meta.xml
<CustomField>
  <fullName>Bron__c</fullName>
  <label>Bron</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Klant-upload</fullName>
      </value>
      <value>
        <fullName>Formulier</fullName>
        <default>true</default>
        <label>Formulier</label>
      </value>
      <value>
        <fullName>Intern</fullName>
      </value>
      <value>
        <fullName>Partner-upload</fullName>
      </value>
      <value>
        <fullName>API</fullName>
      </value>
    </valueSetDefinition>
    <restricted>true</restricted>
  </valueSet>
</CustomField>