force-app/main/default/objects/Foto__c/fields/Categorie__c.field-meta.xml
<CustomField>
  <fullName>Categorie__c</fullName>
  <label>Categorie</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Algemeen</fullName>
        <default>true</default>
        <label>Algemeen</label>
      </value>
      <value>
        <fullName>Voor</fullName>
      </value>
      <value>
        <fullName>Na</fullName>
      </value>
      <value>
        <fullName>Detail</fullName>
      </value>
      <value>
        <fullName>Schade</fullName>
      </value>
      <value>
        <fullName>Locatie</fullName>
      </value>
    </valueSetDefinition>
    <restricted>true</restricted>
  </valueSet>
</CustomField>