force-app/main/default/objects/Foto__c/fields/Copied_Forward__c.field-meta.xml
<CustomField>
  <fullName>Copied_Forward__c</fullName>
  <label>Gekopieerd naar Volgende Fase</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>