force-app/main/default/objects/Foto__c/fields/Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_URL__c</fullName>
    <label>Volledige URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>