force-app/main/default/objects/Foto__c/fields/Is_Public__c.field-meta.xml
<CustomField>
  <fullName>Is_Public__c</fullName>
  <label>Extern Zichtbaar</label>
  <type>Checkbox</type>
  <defaultValue>true</defaultValue>
</CustomField>