force-app/main/default/objects/Foto__c/fields/Lead__c.field-meta.xml
<CustomField>
  <fullName>Lead__c</fullName>
  <label>Lead</label>
  <type>Lookup</type>
  <referenceTo>Lead</referenceTo>
  <relationshipLabel>Lead</relationshipLabel>
  <relationshipName>lead</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>