force-app/main/default/objects/Foto__c/fields/Lead_Product__c.field-meta.xml
<CustomField>
  <fullName>Lead_Product__c</fullName>
  <label>Lead Product</label>
  <type>Lookup</type>
  <referenceTo>Lead_Product__c</referenceTo>
  <relationshipLabel>Lead Product</relationshipLabel>
  <relationshipName>lead_product</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>