force-app/main/default/objects/Foto__c/fields/Opportunity__c.field-meta.xml
<CustomField>
  <fullName>Opportunity__c</fullName>
  <label>Opportunity</label>
  <type>Lookup</type>
  <referenceTo>Opportunity</referenceTo>
  <relationshipLabel>Opportunity</relationshipLabel>
  <relationshipName>opportunity</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>