force-app/main/default/objects/Foto__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
  <fullName>OpportunityLineItem__c</fullName>
  <label>Opp. Product</label>
  <type>Lookup</type>
  <referenceTo>OpportunityLineItem</referenceTo>
  <relationshipLabel>Opp. Product</relationshipLabel>
  <relationshipName>opportunity_line_item</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>