force-app/main/default/objects/Foto__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
  <fullName>Sort_Order__c</fullName>
  <label>Sortering</label>
  <type>Number</type>
  <precision>5</precision>
  <scale>0</scale>
</CustomField>