force-app/main/default/objects/Foto__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>