force-app/main/default/objects/Foto__c/fields/Wasserij_item__c.field-meta.xml
<CustomField>
  <fullName>Wasserij_item__c</fullName>
  <label>Wasserij Item</label>
  <type>Lookup</type>
  <referenceTo>Wasserij_Item__c</referenceTo>
  <relationshipLabel>Wasserij Item</relationshipLabel>
  <relationshipName>wasserij_item</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>