force-app/main/default/objects/Foto__c/fields/Werk_Order1__c.field-meta.xml
<CustomField>
  <fullName>Werk_Order1__c</fullName>
  <label>Werk Order</label>
  <type>Lookup</type>
  <referenceTo>Werk_Order__c</referenceTo>
  <relationshipLabel>Werk Order</relationshipLabel>
  <relationshipName>werk_order1</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>