force-app/main/default/objects/Foto__c/validationRules/Exactly_One_Parent_VR.validationRule-meta.xml
<ValidationRule>
  <fullName>Exactly_One_Parent_VR</fullName>
  <active>true</active>
  <errorConditionFormula>(
    IF(NOT(ISBLANK(Lead__c)), 1, 0) +
    IF(NOT(ISBLANK(Opportunity__c)), 1, 0) +
  IF(NOT(ISBLANK(Werk_Order1__c)), 1, 0) +
    IF(NOT(ISBLANK(OpportunityLineItem__c)), 1, 0) +
    IF(NOT(ISBLANK(Wasserij_item__c)), 1, 0) +
    IF(NOT(ISBLANK(Lead_Product__c)), 1, 0)
  ) &lt;&gt; 1</errorConditionFormula>
  <errorMessage>Koppel een foto aan precies één record (Lead, Opportunity, Werkorder, Opp Product of WO Product).</errorMessage>
</ValidationRule>